--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
         alt="Omnifood logo"
         class="logo"
       />
-      <nav class="main">Navigation</nav>
+      <nav class="main">
+        <ul class="main-nav-list">
+          <li><a class="main-nav-link" href="#">Section 1</a></li>
+          <li><a class="main-nav-link" href="#">Section 2</a></li>
+          <li><a class="main-nav-link" href="#">Section 3</a></li>
+          <li><a class="main-nav-link" href="#">Section 4</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">Section 5</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
