--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- =====GOOGLE FONTS===== -->
+    <!-- ========GOOGLE FONTS======== -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,7 +13,8 @@
       rel="stylesheet"
     />
 
-    <!-- ==========CSS========== -->
+    <!-- ========CSS======== -->
+    <link rel="stylesheet" href="assets/css/general.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Omnifood</title>
   </head>
@@ -101,8 +102,8 @@
           </h2>
         </div>
 
-        <div class="container grid grid--2-cols">
-          <!-- STEP 01 -->
+        <div class="container grid grid--2-cols grid--center-v ">
+          <!-- ========STEP 01======== -->
           <div class="step-text-box">
             <p class="step-number">01</p>
             <h3 class="heading-tertiary">
@@ -123,7 +124,7 @@
             />
           </div>
 
-          <!-- STEP 02 -->
+          <!-- ========STEP 02======== -->
           <div class="step-img-box">
             <img
               src="assets/img/app/app-screen-2.png"
@@ -141,7 +142,7 @@
             </p>
           </div>
 
-          <!-- STEP 03 -->
+          <!-- ========STEP 03======== -->
           <div class="step-text-box">
             <p class="step-number">03</p>
             <h3 class="heading-tertiary">Receive meals at convenient time</h3>
