--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@
         </div>
       </section>
 
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="heading-featured-in">As featured in</h2>
+          <div class="logos">
+            <img src="assets/img/logos/techcrunch.png" alt="Techcrunch logo">
+            <img src="assets/img/logos/business-insider.png" alt="Business Insider logo">
+            <img src="assets/img/logos/the-new-york-times.png" alt="The New York Times logo">
+            <img src="assets/img/logos/forbes.png" alt="Forbes logo">
+            <img src="assets/img/logos/usa-today.png" alt="USA Today logo">
+          </div>
+        </div>
+      </section>
+
       <section class="section-how">
         <div class="container">
           <span class="subheading">How it works</span>
@@ -102,7 +115,7 @@
           </h2>
         </div>
 
-        <div class="container grid grid--2-cols grid--center-v ">
+        <div class="container grid grid--2-cols grid--center-v">
           <!-- ========STEP 01======== -->
           <div class="step-text-box">
             <p class="step-number">01</p>
