--- a/index.html
+++ b/index.html
@@ -98,11 +98,17 @@
         <div class="container">
           <h2 class="heading-featured-in">As featured in</h2>
           <div class="logos">
-            <img src="assets/img/logos/techcrunch.png" alt="Techcrunch logo">
-            <img src="assets/img/logos/business-insider.png" alt="Business Insider logo">
-            <img src="assets/img/logos/the-new-york-times.png" alt="The New York Times logo">
-            <img src="assets/img/logos/forbes.png" alt="Forbes logo">
-            <img src="assets/img/logos/usa-today.png" alt="USA Today logo">
+            <img src="assets/img/logos/techcrunch.png" alt="Techcrunch logo" />
+            <img
+              src="assets/img/logos/business-insider.png"
+              alt="Business Insider logo"
+            />
+            <img
+              src="assets/img/logos/the-new-york-times.png"
+              alt="The New York Times logo"
+            />
+            <img src="assets/img/logos/forbes.png" alt="Forbes logo" />
+            <img src="assets/img/logos/usa-today.png" alt="USA Today logo" />
           </div>
         </div>
       </section>
@@ -174,6 +180,54 @@
           </div>
         </div>
       </section>
+
+      <section class="section-meals">
+        <div class="container">
+          <span class="subheading">Meals</span>
+          <h2 class="heading-secondary">
+            Omnifood AI chooses from 5,000+ recipes
+          </h2>
+        </div>
+
+        <div class="container grid grid--3-cols">
+          <div class="meal">
+            <img
+              src="assets/img/meals/meal-1.jpg"
+              alt="Japanese Gyozas"
+              class="meal-img"
+            />
+            <span class="tag">Vegetarian</span>
+            <p class="meal-title">Japanese Gyozas</p>
+
+            <ul class="meal-atributes">
+              <li class="meal-atribute">
+                <ion-icon name="flame-outline"></ion-icon>
+                <span>650 calories</span>
+              </li>
+              <li class="meal-atribute">
+                <ion-icon name="restaurant-outline"></ion-icon>
+                <span>NutriScore &reg; 74</span>
+              </li>
+              <li class="meal-atribute">
+                <ion-icon name="star-outline"></ion-icon>
+                <span>7.9 rating (537)</span>
+              </li>
+            </ul>
+          </div>
+          <div class="meal">Meals</div>
+          <div class="list">List of diets</div>
+        </div>
+      </section>
     </main>
+
+    <!-- ========IONICONS======== -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
