--- a/index.html
+++ b/index.html
@@ -196,25 +196,69 @@
               alt="Japanese Gyozas"
               class="meal-img"
             />
-            <span class="tag">Vegetarian</span>
-            <p class="meal-title">Japanese Gyozas</p>
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag tag--vegetarian">Vegetarian</span>
+              </div>
+              <p class="meal-title">Japanese Gyozas</p>
 
-            <ul class="meal-atributes">
-              <li class="meal-atribute">
-                <ion-icon name="flame-outline"></ion-icon>
-                <span>650 calories</span>
-              </li>
-              <li class="meal-atribute">
-                <ion-icon name="restaurant-outline"></ion-icon>
-                <span>NutriScore &reg; 74</span>
-              </li>
-              <li class="meal-atribute">
-                <ion-icon name="star-outline"></ion-icon>
-                <span>7.9 rating (537)</span>
-              </li>
-            </ul>
+              <ul class="meal-atributes">
+                <li class="meal-atribute">
+                  <ion-icon class="meal-icon" name="flame-outline"> </ion-icon>
+                  <span><strong>650</strong> calories</span>
+                </li>
+
+                <li class="meal-atribute">
+                  <ion-icon
+                    class="meal-icon"
+                    name="restaurant-outline"
+                  ></ion-icon>
+                  <span>NutriScore &reg; <strong>74</strong></span>
+                </li>
+
+                <li class="meal-atribute">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                  <span><strong>7.9</strong> rating (537)</span>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="meal">Meals</div>
+          
+          <div class="meal">
+            <img
+              src="assets/img/meals/meal-2.jpg"
+              alt="Avocado Salad"
+              class="meal-img"
+            />
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag tag--vegan">Vegan</span>
+                <span class="tag tag--paleo">Paleo</span>
+              </div>
+              <p class="meal-title">Avocado Salad</p>
+
+              <ul class="meal-atributes">
+                <li class="meal-atribute">
+                  <ion-icon class="meal-icon" name="flame-outline"> </ion-icon>
+                  <span><strong>400</strong> calories</span>
+                </li>
+
+                <li class="meal-atribute">
+                  <ion-icon
+                    class="meal-icon"
+                    name="restaurant-outline"
+                  ></ion-icon>
+                  <span>NutriScore &reg; <strong>92</strong></span>
+                </li>
+
+                <li class="meal-atribute">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                  <span><strong>4.8</strong> rating (441)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+       
           <div class="list">List of diets</div>
         </div>
       </section>
