Updating the text because of some mistakes on the text

--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>Gluten-free</span>e
+                <span>Gluten-free</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>Lactose-free</span>ee
+                <span>Lactose-free</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
