Building the Testemonials Section - Part 1

--- a/index.html
+++ b/index.html
@@ -305,6 +305,51 @@
           <a href="#" class="link">See all recipes &rarr;</a>
         </div>
       </section>
+
+      <section class="section-testemonials grid grid--2-cols">
+       
+        <div class="testemonials-container">
+          <span class="subheading">Testemonials</span>
+          <h2 class="heading-secondary">
+           Once you try it, you can't go back
+          </h2>
+    
+        <div class="testemonials">
+          <figure class="testemonial">
+            <img class="testemonial-img" src="/assets/img/customers/dave.jpg" alt="Photo of customer Dave Bryson">
+            <blockquote class="testemonial-text">
+              Inexpensive, healthy and great-tasting meals, without even having to order manually! It feels truly magical. 
+            </blockquote>
+            <p class="testemonial-name">&mdash;Dave Bryson</p>
+          </figure>
+
+          <figure class="testemonial">
+            <img class="testemonial-img" src="/assets/img/customers/ben.jpg" alt="Photo of customer Ben Hadley">
+            <blockquote class="testemonial-text">
+              The AI algorithm is crazy good, it chooses the right meals for me every time. It's amazing not to worry about food anymore! 
+            </blockquote>
+            <p class="testemonial-name">&mdash;Ben Hadley</p>
+          </figure>
+
+          <figure class="testemonial">
+            <img class="testemonial-img" src="/assets/img/customers/steve.jpg" alt="Photo of customer Steve Miller">
+            <blockquote class="testemonial-text">
+              Omnifood is a life saver! I just started a company, so there's no time for cooking. I couldn't live without my daily meals now! 
+            </blockquote>
+            <p class="testemonial-name">&mdash;Steve Miller</p>
+          </figure>
+
+          <figure class="testemonial">
+            <img class="testemonial-img" src="/assets/img/customers/hannah.jpg" alt="Photo of customer Hannah Smith">
+            <blockquote class="testemonial-text">
+              I got Omnifood for the whole family, and it frees up so much time! Plus, everything is organic and vegan and without plastic.
+            </blockquote>
+            <p class="testemonial-name">&mdash;Hannah Smith</p>
+          </figure>
+        </div>
+      </div>
+        <div class="gallery">Gallery</div>
+      </section>
     </main>
 
     <!-- ========IONICONS======== -->
