--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <spn> Paleo </span>
+                <span> Paleo </span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
@@ -307,85 +307,203 @@
       </section>
 
       <section class="section-testemonials grid grid--2-cols">
-       
         <div class="testemonials-container">
           <span class="subheading">Testemonials</span>
-          <h2 class="heading-secondary">
-           Once you try it, you can't go back
-          </h2>
-    
-        <div class="testemonials">
-          <figure class="testemonial">
-            <img class="testemonial-img" src="/assets/img/customers/dave.jpg" alt="Photo of customer Dave Bryson">
-            <blockquote class="testemonial-text">
-              Inexpensive, healthy and great-tasting meals, without even having to order manually! It feels truly magical. 
-            </blockquote>
-            <p class="testemonial-name">&mdash;Dave Bryson</p>
-          </figure>
+          <h2 class="heading-secondary">Once you try it, you can't go back</h2>
 
-          <figure class="testemonial">
-            <img class="testemonial-img" src="/assets/img/customers/ben.jpg" alt="Photo of customer Ben Hadley">
-            <blockquote class="testemonial-text">
-              The AI algorithm is crazy good, it chooses the right meals for me every time. It's amazing not to worry about food anymore! 
-            </blockquote>
-            <p class="testemonial-name">&mdash;Ben Hadley</p>
-          </figure>
+          <div class="testemonials">
+            <figure class="testemonial">
+              <img
+                class="testemonial-img"
+                src="/assets/img/customers/dave.jpg"
+                alt="Photo of customer Dave Bryson"
+              />
+              <blockquote class="testemonial-text">
+                Inexpensive, healthy and great-tasting meals, without even
+                having to order manually! It feels truly magical.
+              </blockquote>
+              <p class="testemonial-name">&mdash;Dave Bryson</p>
+            </figure>
 
-          <figure class="testemonial">
-            <img class="testemonial-img" src="/assets/img/customers/steve.jpg" alt="Photo of customer Steve Miller">
-            <blockquote class="testemonial-text">
-              Omnifood is a life saver! I just started a company, so there's no time for cooking. I couldn't live without my daily meals now! 
-            </blockquote>
-            <p class="testemonial-name">&mdash;Steve Miller</p>
-          </figure>
+            <figure class="testemonial">
+              <img
+                class="testemonial-img"
+                src="/assets/img/customers/ben.jpg"
+                alt="Photo of customer Ben Hadley"
+              />
+              <blockquote class="testemonial-text">
+                The AI algorithm is crazy good, it chooses the right meals for
+                me every time. It's amazing not to worry about food anymore!
+              </blockquote>
+              <p class="testemonial-name">&mdash;Ben Hadley</p>
+            </figure>
 
-          <figure class="testemonial">
-            <img class="testemonial-img" src="/assets/img/customers/hannah.jpg" alt="Photo of customer Hannah Smith">
-            <blockquote class="testemonial-text">
-              I got Omnifood for the whole family, and it frees up so much time! Plus, everything is organic and vegan and without plastic.
-            </blockquote>
-            <p class="testemonial-name">&mdash;Hannah Smith</p>
-          </figure>
+            <figure class="testemonial">
+              <img
+                class="testemonial-img"
+                src="/assets/img/customers/steve.jpg"
+                alt="Photo of customer Steve Miller"
+              />
+              <blockquote class="testemonial-text">
+                Omnifood is a life saver! I just started a company, so there's
+                no time for cooking. I couldn't live without my daily meals now!
+              </blockquote>
+              <p class="testemonial-name">&mdash;Steve Miller</p>
+            </figure>
+
+            <figure class="testemonial">
+              <img
+                class="testemonial-img"
+                src="/assets/img/customers/hannah.jpg"
+                alt="Photo of customer Hannah Smith"
+              />
+              <blockquote class="testemonial-text">
+                I got Omnifood for the whole family, and it frees up so much
+                time! Plus, everything is organic and vegan and without plastic.
+              </blockquote>
+              <p class="testemonial-name">&mdash;Hannah Smith</p>
+            </figure>
+          </div>
         </div>
-      </div>
         <div class="gallery">
           <figure class="gallery-item">
-            <img src="/assets/img/gallery/gallery-1.jpg" alt="Photo of beautifully arranged food">
+            <img
+              src="/assets/img/gallery/gallery-1.jpg"
+              alt="Photo of beautifully arranged food"
+            />
             <!-- <figcaption>Caption</figcaption> -->
           </figure>
           <figure class="gallery-item">
-            <img src="/assets/img/gallery/gallery-2.jpg" alt="Photo of beautifully arranged food">
+            <img
+              src="/assets/img/gallery/gallery-2.jpg"
+              alt="Photo of beautifully arranged food"
+            />
           </figure>
           <figure class="gallery-item">
-            <img src="/assets/img/gallery/gallery-3.jpg" alt="Photo of beautifully arranged food">
+            <img
+              src="/assets/img/gallery/gallery-3.jpg"
+              alt="Photo of beautifully arranged food"
+            />
           </figure>
           <figure class="gallery-item">
-            <img src="/assets/img/gallery/gallery-4.jpg" alt="Photo of beautifully arranged food">
+            <img
+              src="/assets/img/gallery/gallery-4.jpg"
+              alt="Photo of beautifully arranged food"
+            />
           </figure>
           <figure class="gallery-item">
-            <img src="/assets/img/gallery/gallery-5.jpg" alt="Photo of beautifully arranged food">
+            <img
+              src="/assets/img/gallery/gallery-5.jpg"
+              alt="Photo of beautifully arranged food"
+            />
           </figure>
           <figure class="gallery-item">
-            <img src="/assets/img/gallery/gallery-6.jpg" alt="Photo of beautifully arranged food">
+            <img
+              src="/assets/img/gallery/gallery-6.jpg"
+              alt="Photo of beautifully arranged food"
+            />
           </figure>
           <figure class="gallery-item">
-            <img src="/assets/img/gallery/gallery-7.jpg" alt="Photo of beautifully arranged food">
+            <img
+              src="/assets/img/gallery/gallery-7.jpg"
+              alt="Photo of beautifully arranged food"
+            />
           </figure>
           <figure class="gallery-item">
-            <img src="/assets/img/gallery/gallery-8.jpg" alt="Photo of beautifully arranged food">
-          </figure>
-            <figure class="gallery-item">
-            <img src="/assets/img/gallery/gallery-9.jpg" alt="Photo of beautifully arranged food">
-          </figure>
-          <figure class="gallery-item">
-            <img src="/assets/img/gallery/gallery-10.jpg" alt="Photo of beautifully arranged food">
+            <img
+              src="/assets/img/gallery/gallery-8.jpg"
+              alt="Photo of beautifully arranged food"
+            />
           </figure>
           <figure class="gallery-item">
-            <img src="/assets/img/gallery/gallery-11.jpg" alt="Photo of beautifully arranged food">
+            <img
+              src="/assets/img/gallery/gallery-9.jpg"
+              alt="Photo of beautifully arranged food"
+            />
           </figure>
           <figure class="gallery-item">
-            <img src="/assets/img/gallery/gallery-12.jpg" alt="Photo of beautifully arranged food">
+            <img
+              src="/assets/img/gallery/gallery-10.jpg"
+              alt="Photo of beautifully arranged food"
+            />
           </figure>
+          <figure class="gallery-item">
+            <img
+              src="/assets/img/gallery/gallery-11.jpg"
+              alt="Photo of beautifully arranged food"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="/assets/img/gallery/gallery-12.jpg"
+              alt="Photo of beautifully arranged food"
+            />
+          </figure>
+        </div>
+      </section>
+
+      <section class="section-pricing">
+        <div class="container">
+          <span class="subheading">Pricing</span>
+          <h2 class="heading-secondary">
+            Eating well without breaking the bank
+          </h2>
+        </div>
+
+        <div class="container grid grid--2-cols">
+          <div class="pricing-plan">
+            <header class="plan-header">
+              <p class="plan-name">Starter</p>
+              <p class="plan-price"><span>$</span>399</p>
+              <p class="plan-text">per month. That's just $13 per meal!</p>
+            </header>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span> 1 meal per day</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span> Order times are between 11am and 9pm</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span> Delivery is free</span>
+              </li>
+            </ul>
+            <div class="plan-sign-up">
+              <a href="#" class="btn btn--full">Start eating well</a>
+            </div>
+          </div>
+
+          <div class="pricing-plan">
+            <header class="plan-header">
+              <p class="plan-name">Complete</p>
+              <p class="plan-price"><span>$</span>649</p>
+              <p class="plan-text">per month. That's just $11 per meal!</p>
+            </header>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span> 2 meals per day</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span> Order 24/7</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span> Delivery is free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span> Get access to latest recipes</span>
+              </li>
+            </ul>
+            <div class="plan-sign-up">
+              <a href="#" class="btn btn--full">Start eating well</a>
+            </div>
+          </div>
         </div>
       </section>
     </main>
