fixing images path

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         <div class="gallery">
           <figure class="gallery-item">
             <img
-              src="/assets/img/gallery/gallery-1.jpg"
+              src="./assets/img/gallery/gallery-1.jpg"
               alt="Photo of beautifully arranged food"
             />
             <!-- <figcaption>Caption</figcaption> -->
