fixing images path

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <figure class="testemonial">
               <img
                 class="testemonial-img"
-                src="/assets/img/customers/dave.jpg"
+                src="./assets/img/customers/dave.jpg"
                 alt="Photo of customer Dave Bryson"
               />
               <blockquote class="testemonial-text">
@@ -328,7 +328,7 @@
             <figure class="testemonial">
               <img
                 class="testemonial-img"
-                src="/assets/img/customers/ben.jpg"
+                src="./assets/img/customers/ben.jpg"
                 alt="Photo of customer Ben Hadley"
               />
               <blockquote class="testemonial-text">
@@ -341,7 +341,7 @@
             <figure class="testemonial">
               <img
                 class="testemonial-img"
-                src="/assets/img/customers/steve.jpg"
+                src="./assets/img/customers/steve.jpg"
                 alt="Photo of customer Steve Miller"
               />
               <blockquote class="testemonial-text">
@@ -354,7 +354,7 @@
             <figure class="testemonial">
               <img
                 class="testemonial-img"
-                src="/assets/img/customers/hannah.jpg"
+                src="./assets/img/customers/hannah.jpg"
                 alt="Photo of customer Hannah Smith"
               />
               <blockquote class="testemonial-text">
@@ -375,67 +375,67 @@
           </figure>
           <figure class="gallery-item">
             <img
-              src="/assets/img/gallery/gallery-2.jpg"
+              src="./assets/img/gallery/gallery-2.jpg"
               alt="Photo of beautifully arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
-              src="/assets/img/gallery/gallery-3.jpg"
+              src="./assets/img/gallery/gallery-3.jpg"
               alt="Photo of beautifully arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
-              src="/assets/img/gallery/gallery-4.jpg"
+              src="./assets/img/gallery/gallery-4.jpg"
               alt="Photo of beautifully arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
-              src="/assets/img/gallery/gallery-5.jpg"
+              src="./assets/img/gallery/gallery-5.jpg"
               alt="Photo of beautifully arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
-              src="/assets/img/gallery/gallery-6.jpg"
+              src="./assets/img/gallery/gallery-6.jpg"
               alt="Photo of beautifully arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
-              src="/assets/img/gallery/gallery-7.jpg"
+              src="./assets/img/gallery/gallery-7.jpg"
               alt="Photo of beautifully arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
-              src="/assets/img/gallery/gallery-8.jpg"
+              src="./assets/img/gallery/gallery-8.jpg"
               alt="Photo of beautifully arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
-              src="/assets/img/gallery/gallery-9.jpg"
+              src="./assets/img/gallery/gallery-9.jpg"
               alt="Photo of beautifully arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
-              src="/assets/img/gallery/gallery-10.jpg"
+              src="./assets/img/gallery/gallery-10.jpg"
               alt="Photo of beautifully arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
-              src="/assets/img/gallery/gallery-11.jpg"
+              src="./assets/img/gallery/gallery-11.jpg"
               alt="Photo of beautifully arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
-              src="/assets/img/gallery/gallery-12.jpg"
+              src="./assets/img/gallery/gallery-12.jpg"
               alt="Photo of beautifully arranged food"
             />
           </figure>
