Building the Call-To-Action Section - Part 1

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         </div>
       </section>
 
-      <section class="section-testemonials ">
+      <section class="section-testemonials">
         <div class="testemonials-container">
           <span class="subheading">Testemonials</span>
           <h2 class="heading-secondary">Once you try it, you can't go back</h2>
@@ -549,6 +549,15 @@
             </p>
           </div>
         </div>
+      </section>
+
+      <section class="section-cta">
+        <div class="container">
+          <div class="cta">
+          <div class="cta-text-box">CTA</div>
+          <div class="cta-img-box" role="img" aria-label="Woman enjoying food"></div>
+        </div>
+      </div>
       </section>
     </main>
 
