--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                 <div>
                   <label for="select-where">Where did you hear from us?</label>
                   <select name="" id="select-where" required>
-                    <option value="">Please choose one option:</option>
+                    <option value="">Please choose one option</option>
                     <option value="friends">Friends and family</option>
                     <option value="youtube">YouTube video</option>
                     <option value="podcast">Podcast</option>
@@ -608,7 +608,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container grid grid--5-cols">
+      <div class="container grid grid--footer">
         <div class="logo-col">
           <a href="#" class="footer-logo">
             <img
@@ -616,12 +616,24 @@
               alt="Omnifood logo"
               class="logo"
           /></a>
-
           <ul class="social-links">
-            <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
+              ></a>
+            </li>
           </ul>
+
           <p class="copyright">
             Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
           </p>
@@ -629,39 +641,40 @@
         <div class="address-col">
           <p class="footer-heading">Contact us</p>
           <address class="contacts">
-            <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p class="address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
             <p>
-              <a href="tel:415-201-6370">415-201-6370</a><br />
-              <a href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+              <a class="footer-link" href="tel:415-201-6370">415-201-6370</a><br />
+              <a class="footer-link" href="mailto:hello@omnifood.com">hello@omnifood.com</a>
             </p>
           </address>
         </div>
         <nav class="nav-col">
           <p class="footer-heading">Account</p>
           <ul class="footer-nav">
-            <li><a href="#">Create account</a></li>
-            <li><a href="#">Sign in</a></li>
-            <li><a href="#">iOS app</a></li>
-            <li><a href="#">Android app</a></li>
+            <li><a class="footer-link" href="#">Create account</a></li>
+            <li><a class="footer-link" href="#">Sign in</a></li>
+            <li><a class="footer-link" href="#">iOS app</a></li>
+            <li><a class="footer-link" href="#">Android app</a></li>
           </ul>
         </nav>
         <nav class="nav-col">
           <p class="footer-heading">Company</p>
           <ul class="footer-nav">
-            <li><a href="#">About Omnifood</a></li>
-            <li><a href="#">For Business</a></li>
-            <li><a href="#">Cooking partners</a></li>
-            <li><a href="#"> Careers</a></li>
+            <li><a class="footer-link" href="#">About Omnifood</a></li>
+            <li><a class="footer-link" href="#">For Business</a></li>
+            <li><a class="footer-link" href="#">Cooking partners</a></li>
+            <li><a class="footer-link" href="#"> Careers</a></li>
           </ul>
         </nav>
         <nav class="nav-col">
           <p class="footer-heading">Resources</p>
           <ul class="footer-nav">
-            <li><a href="#">Recipe directory</a></li>
-            <li><a href="#">Help center</a></li>
-            <li><a href="#">Privacy & terms</a></li>
+            <li><a class="footer-link" href="#">Recipe directory</a></li>
+            <li><a class="footer-link" href="#">Help center</a></li>
+            <li><a class="footer-link" href="#">Privacy & terms</a></li>
           </ul>
         </nav>
+      </div>
     </footer>
 
     <!-- ========IONICONS======== -->
