--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- ========CSS======== -->
     <link rel="stylesheet" href="assets/css/general.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/queries.css" />
     <title>Omnifood</title>
   </head>
   <body>
