--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img
           src="assets/img/omnifood-logo.png"
