A Short Introduction to JavaScript

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
     <link rel="stylesheet" href="assets/css/general.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/queries.css" />
+
+      <!-- ========IONICONS======== -->
+      <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+
+    <!-- ========MAIN JS======== -->
+    <script defer src="assets/js/script.js"></script>
+
     <title>Omnifood</title>
   </head>
   <body>
@@ -642,7 +656,7 @@
           </ul>
 
           <p class="copyright">
-            Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
+            Copyright &copy; <span class="year">2027</span>  by Omnifood, Inc. All rights reserved.
           </p>
         </div>
         <div class="address-col">
@@ -688,15 +702,5 @@
         </nav>
       </div>
     </footer>
-
-    <!-- ========IONICONS======== -->
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
   </body>
 </html>
